2009-08-25  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Use a_pytis_actions_structure instead of e_pytis_menu in pytis_update_summary_rights.

2009-08-25  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	New codebook c_pytis_action_types.

2009-08-25  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fix typo in db_pytis_menu.py.

2009-08-25  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Add action checking to genmenu.

2009-08-25  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Add missing 'on update cascade' declarations in db_pytis_menu.py.

2009-08-25  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* lib/pytis/form/screen.py:
	* tools/genmenu.py:
	Store side forms as subactions in DMP.

2009-08-25  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/presentation/field.py:
	Use Value.export instead of Type.export in PresentedRow again.
	
	(Among others it avoids crashes on string types containing numeric values.)

2009-08-25  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Add unique constraint to e_pytis_action_rights db table.

2009-08-24  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/application.py:
	* lib/pytis/presentation/spec.py:
	Cleanup of reading DMP information from the database.
	
	- Read it explicitly, not implicitly.
	- Read it only in wx application.
	- Use given connection data instead of config.dbconnection.
	

2009-08-20  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Fix of typo in an ApplicationMenuM field after merges.

2009-08-18  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Don't use quotes in db table docstrings in db_pytis_genmenu.py.

2009-08-17  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	* lib/pytis/form/list.py:
	* tools/genmenu.py:
	Fixes in foldable DMP, make it runnable.

2009-08-14  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/screen.py: